--- a/frontend/src/app/components/user/change-password/change-password.component.css
+++ b/frontend/src/app/components/user/change-password/change-password.component.css
@@ -1,3 +1,54 @@
+.container{
+    width: 100%;
+}
+
 h2{
     margin-block-start: 5px;
 }
+
+.change-password-form .label{
+    width: 100%;
+    margin-bottom: 10px;
+}
+
+.container button[type="submit"] {
+    width: 100%;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    font-size: 15px;
+    justify-content: center;
+}
+
+::ng-deep .p-button-label{
+    flex: none;
+}
+
+::ng-deep .p-password{
+    display: block;
+    border-radius: 5px;
+    background-color: transparent;
+    border: none;
+    border-bottom: 2px solid rgb(173, 173, 173);
+}
+::ng-deep .p-password input{ 
+    width: 100%;
+    border: none;
+    padding: 8px;
+}
+::ng-deep .p-password input::placeholder{
+    color: #a5a5a5;
+}
+
+.container .error-messages small{
+    display: block;
+    color: #ff5252; 
+    margin: 0 0 5px 0;
+} 
+
+@media only screen and (max-width: 1000px) {
+    h2{
+        font-size: large;
+    }
+}
+
