--- a/frontend/src/app/components/user/change-password/change-password.component.html
+++ b/frontend/src/app/components/user/change-password/change-password.component.html
@@ -1,9 +1,9 @@
 <div class="container">
-    <div class="change-password">
+    <div class="change-password-form">
         <form [formGroup]="changePassForm" (ngSubmit)="changePassword()">
             <h2>Change password</h2>
             <div class="label">
-                <label >Old password: <p-password formControlName="oldPassword" type="password" placeholder="Old password" [toggleMask]="true" [feedback]=false></p-password></label> 
+                <label >Old password: <p-password formControlName="oldPassword" type="password" placeholder="Enter old password" [toggleMask]="true" [feedback]=false></p-password></label> 
             </div>
             <div class="error-messages" *ngIf="changePassForm.controls.oldPassword.invalid && (changePassForm.controls.oldPassword.dirty || changePassForm.controls.oldPassword.touched)"> 
                 <small *ngIf="changePassForm.controls.oldPassword.errors?.['required']">
@@ -11,7 +11,7 @@
                 </small>
             </div>
             <div class="label">
-                <label >New password: <p-password formControlName="password" type="password" placeholder="New password" [toggleMask]="true" ></p-password></label>
+                <label >New password: <p-password formControlName="password" type="password" placeholder="Enter new password" [toggleMask]="true" ></p-password></label>
             </div>
             <div class="error-messages" *ngIf="changePassForm.controls.password.invalid && (changePassForm.controls.password.dirty || changePassForm.controls.password.touched)"> 
                 <small *ngIf="changePassForm.controls.password.errors?.['required']">
@@ -34,7 +34,9 @@
                     Passwords are diffrent.
                 </small> 
             </div> 
-            <button pButton type="submit" icon="pi pi-pencil" label="Change password"></button>
+            <div class="button">
+                <button pButton type="submit" icon="pi pi-pencil" label="Change password" class="p-button-secondary p-button-text"></button>
+            </div>  
         </form>
     </div>
 </div>
