--- a/frontend/src/app/components/user/delete-account/delete-account.component.html
+++ b/frontend/src/app/components/user/delete-account/delete-account.component.html
@@ -1,5 +1,7 @@
-<div>
+<div class="container">
     <h2>Delete Account</h2>
-    <p>Are you sure you want to delete your account? This action cannot be undone.</p>
-    <button pButton type="button" label="Delete Account" icon="pi pi-trash" (click)="deleteAccount()" class="p-button-danger"></button>
+    <p>Are you sure you want to delete your account? This action cannot be undone. You lost all your data.</p>
+    <div class="button">
+        <button pButton type="button" label="Delete Account" icon="pi pi-trash" (click)="deleteAccount()" class="p-button-danger p-button-text"></button>
+    </div>
 </div>
