--- a/frontend/src/app/components/game/game.component.html
+++ b/frontend/src/app/components/game/game.component.html
@@ -1,17 +1,16 @@
 <div class="data-box">  
-    <p-dataView #dv [value]="games"[paginator]="true" [rows]="5"  filterBy="name">
+    <p-dataView #dv [value]="games" [paginator]="true" [rows]="5" [rowsPerPageOptions]="[5, 10, 15]" filterBy="name">
         <ng-template pTemplate="header">
             <div class="flex flex-col md:flex-row justify-content-between">
                 <div class="mb-2 md:mb-0">
                 <span class="p-input-icon-left mb-2 md:mb-0 search">
                     <i class="pi pi-search"></i>
-                    <input type="search" pInputText placeholder="Search"/>
+                    <input type="search" pInputText placeholder="Search" (input)="dv.filter($any($event).target.value)">
                 </span>
                 </div>
                 <div class="md:ml-2">
                     <p-dataViewLayoutOptions></p-dataViewLayoutOptions>
                 </div>
-                
             </div>
         </ng-template>
         <ng-template let-game pTemplate="listItem">
