--- a/frontend/src/app/components/user/edit-account/edit-account.component.css
+++ b/frontend/src/app/components/user/edit-account/edit-account.component.css
@@ -1,21 +1,40 @@
 .container-block{
     width: 100%;
+    height: 100%;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    overflow: hidden;
+    position: relative;
 }
+
 .header-con{
     margin-top: 20px;
     width: auto;
+    display: flex;
+}
+.header-con img{
+    margin-right: 20px;
+    width: 100px; 
+    height: 100px; 
+    vertical-align: middle;
 }
 h2{
     text-align: center;
     font-size: xx-large;
 }
+.edit-sections{
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    margin-bottom: 20px;
+}
 
 .edit-sections div{ 
-    margin: 30px;
+    margin: 10px;
     width: 500px;
 }
 
@@ -29,5 +48,15 @@ h2{
     .edit-sections div{
         width: 80%; 
     }    
+
+    .header-con img{
+        width: 50px; 
+        height: 50px; 
+    }
+
+    h2{
+        text-align: center;
+        font-size: x-large;
+    }
 }
 
