--- a/frontend/src/app/components/user/edit-account/edit-account.component.html
+++ b/frontend/src/app/components/user/edit-account/edit-account.component.html
@@ -1,17 +1,18 @@
 <div class="container-block">
   <div class="header-con">
+    <img src="..\assets\images\profile-details.svg" alt="SVG Image"> 
     <h2>Edit User Profile</h2>
   </div>
   <div class="edit-sections">
-    <div class="editDataSection">
+    <div>
       <app-edit-data></app-edit-data>
     </div>
     
-    <div class="changePasswordSection">
+    <div>
       <app-change-password></app-change-password>
     </div>
     
-    <div class="deleteAccountSection">
+    <div>
       <app-delete-account></app-delete-account>
     </div>
   </div>
