--- a/frontend/src/app/components/user/edit-data/edit-data.component.html
+++ b/frontend/src/app/components/user/edit-data/edit-data.component.html
@@ -1,7 +1,7 @@
 <div class="container">
     <div class="edit-profile-form">
         <form [formGroup]="editProfileForm" (ngSubmit)="editProfile()">
-            <h2>Edit data</h2>
+            <h3>User data</h3>
             <div class="label">
                 <label>NickName: <input formControlName="nickName" type="text" pInputText placeholder="NickName"></label>
             </div>
