--- a/frontend/src/app/components/game/game.component.html
+++ b/frontend/src/app/components/game/game.component.html
@@ -27,11 +27,16 @@
                         <div class="game-description">{{game.description}}</div>
                     </div> 
                     <div class="game-list-button" *ngIf="(isLoggedIn$ | async) as isLoggedIn; else notLoggedIn">
-                        <p-button *ngIf="!game.isInUserList" severity="success"  label="Add to list" icon="pi pi-plus" iconPos="right" (onClick)="openAddForm(game.id, game.name)"></p-button>  
-                        <app-game-add-form *ngIf="addGameFormService.getIsOpen() &&  addGameFormService.getSelectedGameId() === game.id; else noForm" [gameId]="addGameFormService.getSelectedGameId()" [gameName]="addGameFormService.getSelectedGameName()" class="overlay"></app-game-add-form>
-                        <ng-template #noForm>
+                        <ng-container *ngIf="game.isInUserList; then deleteGame; else addGame"></ng-container>   
+                        <ng-template #addGame>
+                            <p-button *ngIf="!game.isInUserList" severity="success"  label="Add to list" icon="pi pi-plus" iconPos="right" (onClick)="openAddForm(game.id, game.name)"></p-button>  
+                            <app-game-add-form (addedGameEvent)="onAddGameEvent($event)" *ngIf="addGameFormService.getIsOpen() &&  addGameFormService.getSelectedGameId() === game.id; else noForm" [gameId]="addGameFormService.getSelectedGameId()" [gameName]="addGameFormService.getSelectedGameName()" class="overlay"></app-game-add-form>
+                            <ng-template #noForm>
+                            </ng-template>
+                        </ng-template>                     
+                        <ng-template #deleteGame>
+                            <p-button *ngIf="game.isInUserList"  severity="danger" label="Remove" icon="pi pi-minus" iconPos="right" (onClick)="deleteGameFromList(game.id)"></p-button>
                         </ng-template>
-                        <p-button *ngIf="game.isInUserList"  severity="danger" label="Remove" icon="pi pi-minus" iconPos="right" (onClick)="deleteGameFromList(game.id)"></p-button>
                     </div>
                     <ng-template #notLoggedIn>
                         <p-button label="Add to list" severity="success"  icon="pi pi-plus" iconPos="right" [routerLink]="['/login']"></p-button>
@@ -51,16 +56,21 @@
                     </div>
                     <div class="game-grid-action">
                         <span class="game-rating"><i class="pi pi-star-fill"></i>Rating: {{game.rating}}</span>
-                        <!-- <div class="game-list-button" *ngIf="(isLoggedIn$ | async) as isLoggedIn; else notLoggedIn"> -->
-                            <p-button *ngIf="!game.isInUserList" severity="success"  label="Add to list" icon="pi pi-plus" iconPos="right" (onClick)="openAddForm(game.id, game.name)"></p-button>  
-                            <app-game-add-form *ngIf="addGameFormService.getIsOpen() &&  addGameFormService.getSelectedGameId() === game.id; else noForm" [gameId]="addGameFormService.getSelectedGameId()" [gameName]="addGameFormService.getSelectedGameName()" class="overlay"></app-game-add-form>
-                            <ng-template #noForm>
-                              </ng-template>
-                            <p-button *ngIf="game.isInUserList"  severity="danger" label="Remove" icon="pi pi-minus" iconPos="right" (onClick)="deleteGameFromList(game.id)"></p-button>
-                        <!-- </div> -->
-                        <!-- <ng-template #notLoggedIn>
+                        <div class="game-list-button" *ngIf="(isLoggedIn$ | async) as isLoggedIn; else notLoggedIn">
+                            <ng-container *ngIf="game.isInUserList; then deleteGame; else addGame"></ng-container>   
+                            <ng-template #addGame>
+                                <p-button *ngIf="!game.isInUserList" severity="success"  label="Add to list" icon="pi pi-plus" iconPos="right" (onClick)="openAddForm(game.id, game.name)"></p-button>  
+                                <app-game-add-form  (addedGameEvent)="onAddGameEvent($event)" *ngIf="addGameFormService.getIsOpen() &&  addGameFormService.getSelectedGameId() === game.id; else noForm" [gameId]="addGameFormService.getSelectedGameId()" [gameName]="addGameFormService.getSelectedGameName()" class="overlay"></app-game-add-form>
+                                <ng-template #noForm>
+                                </ng-template>
+                            </ng-template>                     
+                            <ng-template #deleteGame>
+                                <p-button *ngIf="game.isInUserList"  severity="danger" label="Remove" icon="pi pi-minus" iconPos="right" (onClick)="deleteGameFromList(game.id)"></p-button>
+                            </ng-template>
+                        </div>
+                        <ng-template #notLoggedIn>
                             <p-button severity="success" label="Add to list" icon="pi pi-plus" iconPos="right" [routerLink]="['/login']"></p-button>
-                        </ng-template> -->
+                        </ng-template>
                      </div> 
                 </div>
             </div>
