--- a/frontend/src/app/components/gameDetail/game-detail/game-detail.component.html
+++ b/frontend/src/app/components/gameDetail/game-detail/game-detail.component.html
@@ -21,43 +21,45 @@
             </div>
             <div class="game-button">
                 <div class="game-list-button" *ngIf="(isLoggedIn$ | async) as isLoggedIn; else notLoggedIn">
-                    <div *ngIf="!gameDetails.isInUserList" class="game-add-to-list">
+                    <div *ngIf="!gameDetails.isInUserList; else inList" class="game-add-to-list">
                         <p-button  severity="success"  label="Add to list" icon="pi pi-plus" iconPos="right" (onClick)="openAddForm(gameDetails.id, gameDetails.name)"></p-button>  
-                        <app-game-add-form *ngIf="addGameFormService.getIsOpen() &&  addGameFormService.getSelectedGameId() === gameDetails.id; else noForm" [gameId]="addGameFormService.getSelectedGameId()" [gameName]="addGameFormService.getSelectedGameName()" class="overlay"></app-game-add-form>
+                        <app-game-add-form (addedGameEvent)="onAddGameEvent($event)" *ngIf="addGameFormService.getIsOpen() &&  addGameFormService.getSelectedGameId() === gameDetails.id; else noForm" [gameId]="addGameFormService.getSelectedGameId()" [gameName]="addGameFormService.getSelectedGameName()" class="overlay"></app-game-add-form>
                         <ng-template #noForm> </ng-template>
                     </div> 
-                    <div *ngIf="gameDetails.isInUserList" class="game-added-to-list">
-                        <div class="rate"> 
-                            <p-rating [(ngModel)]="rateValue" [stars]="10" [cancel]="false" [disabled]="true"></p-rating>
-                            <button pButton (click)="showEditUserGameForm()" class="p-button-secondary p-button-text">Edit</button>
-                            <div *ngIf="openUserGameForm" class="overlay">
-                            <div class="container"> 
-                                <form [formGroup]="gameEditForm" (ngSubmit)="editUserGameDetails()">
-                                    <div class="header-add-form">
-                                      <div class="left"></div>
-                                      <div class="middle">Edit "{{gameDetails.name}}" on your list</div> 
-                                      <div class="pi pi-times right" (click)="closeEditForm()"></div>
-                                    </div>
-                                    <div class="form">
-                                        <div class="label">
-                                            <label for="rating">Rating: <p-rating formControlName="rating" [stars]="10" ></p-rating></label>
+                    <ng-template #inList>
+                        <div *ngIf="gameDetails.isInUserList" class="game-added-to-list">
+                            <div class="rate"> 
+                                <p-rating [(ngModel)]="rateValue" [stars]="10" [cancel]="false" [disabled]="true"></p-rating>
+                                <button pButton (click)="showEditUserGameForm()" class="p-button-secondary p-button-text">Edit</button>
+                                <div *ngIf="openUserGameForm" class="overlay">
+                                <div class="container"> 
+                                    <form [formGroup]="gameEditForm" (ngSubmit)="editUserGameDetails()">
+                                        <div class="header-add-form">
+                                          <div class="left"></div>
+                                          <div class="middle">Edit "{{gameDetails.name}}" on your list</div> 
+                                          <div class="pi pi-times right" (click)="closeEditForm()"></div>
                                         </div>
-                                        <div class="label">
-                                          <label  for="rating" class="favourites-label">
-                                            Add to Favorites
-                                            <i  *ngIf="isFavActive" (click)="onFavClick()" class="pi pi-heart-fill fav" ></i>
-                                            <i *ngIf="!isFavActive" (click)="onFavClick()" class="pi pi-heart-fill nofav" ></i>
-                                          </label>
-                                        </div>               
-                                        <button type="submit" [disabled]="gameEditForm.invalid">Edit game stats on list</button>
-                                    </div>
-                                </form> 
-                               
-                              </div>
+                                        <div class="form">
+                                            <div class="label">
+                                                <label for="rating">Rating: <p-rating formControlName="rating" [stars]="10" ></p-rating></label>
+                                            </div>
+                                            <div class="label">
+                                              <label  for="rating" class="favourites-label">
+                                                Add to Favorites
+                                                <i  *ngIf="isFavActive" (click)="onFavClick()" class="pi pi-heart-fill fav" ></i>
+                                                <i *ngIf="!isFavActive" (click)="onFavClick()" class="pi pi-heart-fill nofav" ></i>
+                                              </label>
+                                            </div>               
+                                            <button type="submit" [disabled]="gameEditForm.invalid">Edit game stats on list</button>
+                                        </div>
+                                    </form> 
+                                   
+                                  </div>
+                                </div>
                             </div>
-                        </div>
-                        <p-button severity="danger" label="Remove" icon="pi pi-minus" iconPos="right" (onClick)="deleteGameFromList(gameDetails.id)"></p-button>   
-                    </div>     
+                            <p-button severity="danger" label="Remove" icon="pi pi-minus" iconPos="right" (onClick)="deleteGameFromList(gameDetails.id)"></p-button>   
+                        </div> 
+                    </ng-template>  
                 </div>
                 <ng-template #notLoggedIn>
                     <p-button severity="success" label="Add to list" icon="pi pi-plus" iconPos="right" [routerLink]="['/login']"></p-button>
@@ -74,7 +76,7 @@
         <div class = "game-comments">
             <div class="comment-header">
                 <h3>Comments</h3>
-                <button pButton type="button" icon="pi pi-plus" class="p-button-rounded p-button-secondary p-button-text" (click)="showCommentForm()"></button>  
+                <button pButton type="button" icon="pi pi-plus" class="p-button-rounded p-button-secondary p-button-text" (click)="showCommentForm()" [disabled]="userComment !== undefined"></button>  
             </div>
             <div *ngIf="showAddCommentForm" class="comment-form-container"> 
                 <form (ngSubmit)="addGameComment()">
