--- a/frontend/src/app/components/gameDetail/game-detail/game-detail.component.html
+++ b/frontend/src/app/components/gameDetail/game-detail/game-detail.component.html
@@ -1,7 +1,13 @@
 <div class="game-detail-box">
     <div class="game-general">
-        <div class="image-box">
+        <!-- <div class="image-box">
             <img [src]="gameDetails.imageUrl" [alt]="gameDetails.name"/>
+        </div> -->
+        <div class="game-grid-head">
+            <div class="image-box">
+                <img [src]="gameDetails.imageUrl" [alt]="gameDetails.name"/>
+            </div>
+            <div class="hex"><div class="rating-text">{{gameDetails.rating === 0 ? '-' : gameDetails.rating}}</div></div>
         </div>
         <div class="general-info">
             <div>
@@ -10,7 +16,7 @@
                     <div *ngIf="!isFavourite" class="pi pi-heart-fill nofav"></div>
                     <div *ngIf="isFavourite" class="pi pi-heart-fill fav"></div> 
                 </div>
-                    <div class="game-rating"><i class="pi pi-star-fill"></i> Rating: <span class="rating-value">{{gameDetails.rating === 0 ? '-' : gameDetails.rating}}</span></div>
+                    <!-- <div class="game-rating"><i class="pi pi-star-fill"></i> Rating: <span class="rating-value">{{gameDetails.rating === 0 ? '-' : gameDetails.rating}}</span></div> -->
                 </div>
                 <div class="game-details">
                     <div class="game-players"><span class="header">Players: </span><span class="desc">{{gameDetails.players}}</span> </div>
