--- a/frontend/src/app/components/user/edit-account/edit-account.component.html
+++ b/frontend/src/app/components/user/edit-account/edit-account.component.html
@@ -1,6 +1,6 @@
 <div class="container-block">
   <div class="header-con">
-    <img src="..\assets\images\profile-details.svg" alt="SVG Image"> 
+    <!-- <img src="..\assets\images\profile-details.svg" alt="SVG Image">  -->
     <h2>User Profile</h2>
   </div>
   <div class="edit-sections">
