--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -3,14 +3,51 @@
 body {
   margin: 0;
   padding: 0;
-  /* font-family: Arial, sans-serif; */
   background-color: #ffffff; 
-  /* color: rgb(0, 0, 0); */
   width: 100%;
   height: 100%;
   font-family: "Inter var", sans-serif;
   color: #495057;
 }
+
+.hex {
+  position: relative;
+  width: 60px;
+  height: 34.64px;
+  line-height: 17px;
+  background-color: #f19364;
+  color: white;
+  text-align: center;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-top: -40px; 
+  margin-left: -10px;
+  z-index: 1;
+  font-weight: bolder;
+}
+
+.hex:before,
+.hex:after {
+  content: "";
+  position: absolute;
+  left: 0;
+  width: 0;
+  border-left: 30px solid transparent;
+  border-right: 30px solid transparent;
+}
+
+.hex:before {
+  bottom: 100%;
+  border-bottom: 17.32px solid #f19364;
+}
+
+.hex:after {
+  top: 100%;
+  width: 0;
+  border-top: 17.32px solid #f19364;
+}
+
 
 
 
