--- a/frontend/src/app/components/gameDetail/game-detail/game-detail.component.html
+++ b/frontend/src/app/components/gameDetail/game-detail/game-detail.component.html
@@ -7,7 +7,7 @@
             <div class="image-box">
                 <img [src]="gameDetails.imageUrl" [alt]="gameDetails.name"/>
             </div>
-            <div class="hex"><div class="rating-text">{{gameDetails.rating === 0 ? '-' : gameDetails.rating}}</div></div>
+            <div class="hex"><div class="rating-text">Overall rate: {{gameDetails.rating === 0 ? '-' : gameDetails.rating}}</div></div>
         </div>
         <div class="general-info">
             <div>
