--- a/frontend/src/app/components/user-profile/user-game-list/user-game-list.component.css
+++ b/frontend/src/app/components/user-profile/user-game-list/user-game-list.component.css
@@ -1,19 +1,38 @@
 .data-box{
-    padding: 2rem;
+    padding: 0 2rem 2rem 2rem;
     width: 100%;
     height: 100%;
 }
 
 .user-info{
+    padding: 15px 10px 15px 10px;
     display: flex;
     justify-content: space-between;
     align-items: center;
-    margin-bottom: 10px;
+    margin: 10px 0 10px 0;
+    border-bottom: 2px solid #dfdede; 
+    border-top: 2px solid #dfdede;
+    align-items: center;
+    position: relative; 
 }
+
+.user-info::before{
+    content: "";
+    background-image: url('../../../../assets/images/back1.jpeg');
+    background-size: cover;
+    position: absolute;
+    top: 0px;
+    right: 0px;
+    bottom: 0px;
+    left: 0px;
+    opacity: 0.75;
+}
+
 .user-name{
     font-size: large;
     width: 180px;
     padding: 10px;
+    position: relative;
 }
 .user{
     cursor: pointer;
@@ -21,6 +40,7 @@
 
 .button-return button{
     font-size: large;
+    position: relative;
 }
 .user-info div{
     align-self: center;
@@ -31,8 +51,8 @@
     justify-content: center;
     align-items: center;
     font-weight: bolder;
-    color: #00539C;
     font-size: x-large;
+    position: relative;
 }
 
 .game-grid-item {
