--- a/frontend/src/app/components/user-profile/user-game-list/user-game-list.component.css
+++ b/frontend/src/app/components/user-profile/user-game-list/user-game-list.component.css
@@ -4,6 +4,19 @@
     height: 100%;
 }
 
+.overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5); 
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    z-index: 999;
+}
+
 .user-info{
     padding: 15px 10px 15px 10px;
     display: flex;
@@ -48,6 +61,91 @@
     font-weight: bolder;
     padding-right: 10px;
 }
+
+.nofav{
+    color: #8a8a8a;
+    margin-left: 10px;
+    font-size: 19px;
+}
+.fav{
+    color: #ff0000 ;
+    margin-left: 10px;
+    font-size: 19px;
+}
+
+i{
+    margin-right: 5px;
+}
+
+.pi-star-fill{
+    color: #ffd000;
+}
+
+.header{
+    font-weight: bold;
+    color: #3c3c3d;
+}
+
+.header-add-form{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    border-bottom: 2px solid #cacaca; 
+    margin-bottom: 20px;
+    padding-bottom: 10px;
+}
+
+.header-add-form .middle {
+    flex-grow: 1;
+    text-align: center;
+    font-weight: bold;
+  }
+  
+.header-add-form .left, .header-add-form .right {
+    flex-shrink: 0;
+}
+
+.container{
+    width: auto; 
+    height: auto;
+    background-color:#ffffff;
+    border: 1.5px solid #c7c7c7;
+    padding: 30px;
+    border-radius: 10px; 
+    box-shadow: 0 40px 40px 0 rgba(0, 0, 0, 0.2); 
+   
+}
+
+input::placeholder {
+    color: #a5a5a5; 
+}
+
+.container .label{
+    width: 100%;
+    margin-bottom: 10px;
+}
+
+.container .label label {
+    width: 100%;
+    color: #000000;
+}
+
+.container button[type="submit"] {
+    width: 100%;
+    padding: 10px;
+    background-color: #EEA47F;
+    color: rgb(255, 255, 255);
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    font-size: 15px;
+}
+
+.container button[type="submit"]:hover, .comment-form-container button[type="submit"]:hover{
+    background-color: #f19364;
+}
+
+
 .user-info div{
     align-self: center;
 }
